<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_popup_title"
        style="@style/tvTextLarge"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/thanks"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_popup_description"
                style="@style/tvTextNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:gravity="center"
                android:padding="@dimen/vertical_margin"
                android:text="@string/description"
                android:textColorLink="@color/colorText"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center">

        <Button
            android:id="@+id/btn_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/colorGreen"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>