<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@drawable/bg_dialog_underline"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_alert_dialog_about"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="4dp"
            android:layout_marginLeft="5dp"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_about"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_alert_dialog_title"
            style="@style/tvTextNormal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/alert"   />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:visibility="invisible"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/image" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_dialog_underline"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_margin_half"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_alert_dialog_detail"
                style="@style/tvTextNormal"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:gravity="center"
                android:autoLink="all"
                android:textColorLink="@color/colorText"
                android:layout_margin="@dimen/vertical_margin_half"
                android:text="@string/description" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:gravity="center">

        <Button
            android:id="@+id/btn_alert_dialog_button2"
            style="@style/Button_disable"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorTextLite"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="@string/button" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dialog_line"/>

        <Button
            android:id="@+id/btn_alert_dialog_button1"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/button" />

    </LinearLayout>

</LinearLayout>